--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="MODULE">
+<html>
 
 	<head>
 
@@ -9,15 +9,15 @@
 
 		<title></title>
 
-		<link rel="stylesheet" type="text/css" href="styles/app.css">
+		<link rel="stylesheet" href="styles/site.css">
 
 	</head>
 
 	<body>
 
-		<!-- start building here --> Test
+		<!-- start building here -->
 
-		<script src="scripts/app.js"></script>
+		<script src="scripts/site.js"></script>
 
 	</body>
 
